--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -10,6 +10,7 @@ h1{
 	width:20%;
 	font-size:15px;
 	float:left;
+	margin-top:0;
 }
 
 
@@ -30,21 +31,14 @@ h1{
 	width:70%;
 	border: 1px solid black;
 	float:right;
+	margin-top:0;
 }
 
-h2{
-	display:block;
-	border:1px solid black;
-	width:30%;
-	margin:10px;
-	text-align:left;
-	padding:0;
+#body{
 
-}
+border:1px solid black;
+margin-top:50px;
 
-#heading{
-	
-	margin-top: 20px;
 }
 
 
