--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -61,7 +61,8 @@ padding:3px;
 
 	clear:both;
 	border-top:2px solid #f1efef;
-	margin: 40px 100px;
+	margin: 40px auto;
+	width: 960px;
 	
 
 
@@ -77,12 +78,14 @@ padding:3px;
 
 .inner-box{
 float:left;
-width:calc( 100% - 270px);
-min-width: 500px;
+/*width:calc( 100% - 270px);*/
+/*min-width: 500px;*/
+width: 650px;
 background-color:#ffffff;
 text-align:justify;
 padding:20px;
 box-shadow: 2px 2px 5px #dedede;
+
 
 
 }
@@ -93,6 +96,9 @@ box-shadow: 2px 2px 5px #dedede;
 	/*border:1px solid black;*/
 	color:#4aaaa5;
 	border-bottom: 3px solid #f1efef;
+	margin: 30px;
+    font-weight: bold;
+    font-size: 25px;
 
 
 
@@ -119,8 +125,9 @@ box-shadow: 2px 2px 5px #dedede;
 	border:1px solid #f1efef;
 	background-color:#ffffff;
 	padding:20px;
-	width: 240px;
+	width: 270px;
 	box-shadow: 2px 2px 5px #dedede;
+	text-align: center;
 
 }
 
@@ -134,6 +141,7 @@ box-shadow: 2px 2px 5px #dedede;
 h3{
 	border-bottom: 3px solid #f1efef;
 	margin:5px 0;
+	color:#4aaaa5;
 }
 
 .footer{
@@ -231,8 +239,12 @@ border-color: initial;
 
 	position:absolute;
 	bottom:0;
-	background-color: green;
+	background-color: #4aaaa5;
 	width:100%;
+	text-align:center;
+	color:white;
+
+
 }
 
 
