--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -17,7 +17,9 @@ body{
 	background:white;
 	padding:15px 100px;
 	padding-bottom:1px;
-	border:1px solid #dedede;
+	/*border:1px solid #dedede;*/
+	/*width:960px;*/
+
 
 }
 
@@ -27,7 +29,7 @@ body{
 	border-radius:5px 5px 0 0;
 	padding:10px 20px;
 	display: inline-block;
-	margin:0;
+	margin-left: 56px;
 
 	
 }
@@ -39,9 +41,17 @@ body{
 
 }
 
+
+a:hover{
+
+	background-color: #0F787F;
+}
+
+
 .nav{
 	display:inline;
 	float:right;
+	margin-right: 65px;
 }
 
 .nav > a {
@@ -63,6 +73,7 @@ padding:3px;
 	border-top:2px solid #f1efef;
 	margin: 40px auto;
 	width: 960px;
+
 	
 
 
@@ -78,7 +89,7 @@ padding:3px;
 
 .inner-box{
 float:left;
-/*width:calc( 100% - 270px);*/
+height:calc( 100vh - 10px);
 /*min-width: 500px;*/
 width: 650px;
 background-color:#ffffff;
@@ -96,7 +107,7 @@ box-shadow: 2px 2px 5px #dedede;
 	/*border:1px solid black;*/
 	color:#4aaaa5;
 	border-bottom: 3px solid #f1efef;
-	margin: 30px;
+	margin: 30px auto;
     font-weight: bold;
     font-size: 25px;
 
@@ -116,6 +127,7 @@ box-shadow: 2px 2px 5px #dedede;
 
 .intro{
 	display:inline;
+
 	/*padding-left: 10px;*/
 
 }
@@ -124,24 +136,28 @@ box-shadow: 2px 2px 5px #dedede;
 	float:right;
 	border:1px solid #f1efef;
 	background-color:#ffffff;
+	font-size: 20px;
+	font-weight:bold;
 	padding:20px;
 	width: 270px;
 	box-shadow: 2px 2px 5px #dedede;
 	text-align: center;
-
+	height: 175px;
 }
+
 
 
 .social-network{
 
 	width: 40px;
-
+	/*margin-top: 10px;*/
 }
 
 h3{
 	border-bottom: 3px solid #f1efef;
-	margin:5px 0;
+	margin:30px 0;
 	color:#4aaaa5;
+
 }
 
 .footer{
@@ -150,9 +166,10 @@ h3{
 	border-top:15px solid #4aaaa5;
 	background-color:#666666;
 	clear:both;
-	color:#ffffff;
+	color:#dcd6d6;
 	width:100%;
-	font-size:10px;
+	/*height:10px;*/
+	font-size:13px;
 	text-align:center;
 	padding: 20px;
 	margin: 0;
@@ -162,9 +179,12 @@ h3{
 
 
 
+
+
+
 label{
 	display:block;
-	margin: 5px 0px;
+	margin: 16px 0px;
 	color: grey;
 }
 
@@ -195,13 +215,12 @@ border-color: initial;
 }
 
 
-/*img{
+img:hover{
 
-	width:40%;
-	margin: 10px 10px;
+	opacity: 0.5;
 }
 
-*/
+
 
 
 .placeholder{
@@ -222,10 +241,11 @@ border-color: initial;
 
 .portfolio-wrapper{
 
-	width:40%;
+	width:30%;
 	position: relative;
 	float:left;
-	margin: 0 20px;
+	margin: 12px 26px;
+
 
 }
 
@@ -238,15 +258,20 @@ border-color: initial;
 .portfolio-text{
 
 	position:absolute;
-	bottom:0;
+	bottom:12px;
 	background-color: #4aaaa5;
 	width:100%;
 	text-align:center;
 	color:white;
-
+	padding:10px;
 
 }
 
+
+.contact{
+
+	margin-left: 10px;
+}
 
 
 
