--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -89,8 +89,8 @@ padding:3px;
 
 .inner-box{
 float:left;
-height:calc( 100vh - 10px);
-/*min-width: 500px;*/
+/*height:calc( 100vh - 10px);*/
+min-height: 600px;
 width: 650px;
 background-color:#ffffff;
 text-align:justify;
